# LayerOpt

./: .buildinfo  .gitignore  LICENSE  README.md  background.html  examples.html  genindex.html  index.html  installation.html  module_data.html  module_multilayer.html  module_permittivity.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: background.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  module_data.doctree  module_multilayer.doctree  module_permittivity.doctree  modules.doctree
_autosummary/: LayerOpt.Experiment.ExperimentData.html  LayerOpt.Permittivity.LinearPermittivityModel.html  LayerOpt.Permittivity.LinearSplinePermittivityModel.html  LayerOpt.Permittivity.PermittivityModel.html  LayerOpt.Permittivity.QuadraticPermittivityModel.html  LayerOpt.Permittivity.QuadraticSplinePermittivityModel.html  LayerOpt.Permittivity.SimpleLinearPermittivityModel.html  LayerOpt.Permittivity.SimpleQuadraticPermittivityModel.html  LayerOpt.Permittivity.SimpleQuadraticSplinePermittivityModel.html  LayerOpt.core.MultilayerLearner.html  LayerOpt.core.MultilayerOptimizer.html  LayerOpt.core.MultilayerProblemSolution.html  LayerOpt.core.MultilayerStructure.html  LayerOpt.core.closest_entries.html
_modules/: index.html
_sources/: examples.rst.txt  index.rst.txt  module_multilayer.rst.txt  module_permittivity.rst.txt
data/: 050wt_1.csv  overview.csv
docs/: background.rst  conf.py  examples.rst  index.rst  installation.rst  module_data.rst  modules.rst
scripts/: Experiment-example.py  (+4 more)
(+44 files in other folders)
